--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-release-tabletop",
+  "version": "0.1.0",
   "homepage": "https://github.com/daniymilner/angular-release-tabletop",
   "authors": [
     "Aleksey Olenyuk <alo@qapint.com>"
